<resources>
    <string name="metrotext_Help">Hướng dẫn sử dụng</string>
    <string name="metrotext_chart">Số liệu điều hành</string>
    <string name="contacts_manhanvienlabel">Mã nhân viên:&#160; </string>
    <string name="contacts_ngaysinhlabel">Năm sinh:&#160; </string>
    <string name="contacts_donvilabel">Đơn vị:&#160; </string>
    <string name="contacts_status">Trạng thái:&#160; </string>
    <string name="contacts_status_content">Đang làm việc</string>
    <string name="contacts_chucvulabel">Chức danh:&#160; </string>
    <string name="contact_detail_title_upcase">CHI TIẾT DANH BẠ</string>
    <string name="TEXT_NO_CONTACT">Không có dữ liệu</string>
    <string name="task_assigntaskuser_alert_emty">Đồng chí chưa chọn người giao việc.</string>
    <string name="text_notext">Không có</string>
    <string name="text_notext_vn">Không có</string>
    <string name="text_notext_en">Not exist</string>
    <string name="task_received_progresstitle">Chi tiết công việc</string>
    <string name="task_received_progress_task_title_ex_person">Người thực hiện:&#160; </string>
    <string name="task_received_progress_task_title_ex_person_html"><Data><![CDATA[Người thực hiện<font color="#FF0000">*</font>:]]></Data></string>
    <string name="task_received_progress_task_hint_progress">Tiến độ </string>
    <string name="task_received_progress_task_complate_progress">Hoàn thành</string>
    <string name="task_create_selectdepart">Đơn vị thực hiện</string>
    <string name="task_create_selectdepart_html"><Data><![CDATA[Đơn vị thực hiện<font color="#FF0000">*</font>:]]></Data></string>
    <string name="task_create_phoi_hop">Đơn vị phối hợp</string>
    <string name="send_sms_title">Gửi tin nhắn</string>
    <string name="task_item_time">Thời gian:&#160; </string>
    <string name="task_item_category"><Data><![CDATA[Loại công việc<font color="#FF0000">*</font>:]]></Data></string>
    <string name="task_menu_report_day">Theo ngày&#160;</string>
    <string name="task_menu_report_week">Theo tuần&#160;</string>
    <string name="task_menu_report_month">Theo tháng&#160;</string>
    <string name="task_menu_report_3month">Theo quý&#160;</string>
    <string name="taskitem_taskreceived">Việc giao đi&#160;</string>
    <string name="taskrank_itemstatus">Trạng thái:&#160; </string>
    <string name="taskrank_createtasksucess">Tạo việc thành công</string>
    <string name="taskrank_seflcommentmytask">Tự đánh giá công việc</string>
    <string name="taskrank_mytaskcheck">Đánh giá công việc</string>
    <string name="taskrank_updatetask">Cập nhật tiến độ</string>
    <string name="taskrank_btn_popupsubmitcommentall">Đánh giá</string>
    <string name="TEXT_NO_TASK">Không có việc nào.</string>
    <string name="document_alert_error_savefile">Lưu văn bản không thành công.</string>
    <string name="document_alert_error_readfile">Lỗi đọc file</string>
    <string name="document_alert_error_downloadfile">File không tồn tại</string>
    <string name="error_downloadfile">Lỗi tải File, đồng chí vui lòng tải lại sau</string>
    <string name="document_alert_save">Đã chuyển công văn thành đã lưu</string>
    <string name="document_alert_unsave">Đã chuyển công văn thành chưa lưu</string>
    <string name="documentlist">Tất cả</string>
    <string name="documentdetail">Nội dung công văn</string>
    <string name="taskdetail">Nội dung nhiệm vụ</string>
    <string name="document_item_listtaskcreate">Phân công thực hiện&#160;</string>
    <string name="document_item_title_list_departreceived">Danh sách đơn vị đã chuyển&#160;</string>
    <string name="document_item_title_list_depart_group_user_received">Danh sách nhóm đã chuyển&#160;</string>
    <string name="document_item_title_list_userreceived">Danh sách cá nhân đã chuyển&#160;</string>
    <string name="document_item_title_list_userfolowreceived">Danh sách cá nhân cùng nhận văn bản&#160;</string>
    <string name="document_item_list_userfolowreceived">&#160;Danh sách cùng nhận văn bản&#160;</string>
    <string name="document_item_list_userreceived">&#160;Danh sách cá nhân đã chuyển&#160;</string>
    <string name="document_item_list_groupreceived">&#160;Danh sách đơn vị đã chuyển&#160;</string>
    <string name="tv_viewall">Hiển thị tất cả</string>
    <string name="popupSearch_titleSearch">Tìm kiếm</string>
    <string name="popupSearch_titleSearch_staff">Họ tên, email</string>
    <string name="popupSearch_titleSearch_group_personal">Tên nhóm</string>
    <string name="documentsendocgroup_alert_emty">Đồng chí chưa chọn đơn vị</string>
    <string name="documentsendoc_alert_emty">Đồng chí chưa chọn cá nhân</string>
    <string name="documentsendoc_alert_emty_group_user">Đồng chí chưa chọn nhóm</string>
    <string name="documentsendocgroupsearch_alert_emty">Đồng chí chưa chọn đơn vị</string>
    <string name="no_search">Đồng chí chưa nhập tên người cần tìm</string>
    <string name="documentsend">CHUYỂN CÔNG VĂN</string>
    <string name="documentsend_targetuser">Cá nhân</string>
    <string name="documentsend_target_group_user">Nhóm cá nhân</string>
    <string name="documentusersend">Người gửi:&#160; </string>
    <string name="documentdatepublic">Ngày ban hành:&#160; </string>
    <string name="lock">Khóa</string>
    <string name="unlock">Chưa khóa</string>
    <string name="documentsend_targetgroup">Đơn vị</string>
    <string name="TEXT_NO_DOCUMENT_SIGN">Không có văn bản nào.</string>
    <string name="documetReviewSign_nemu_all">Tất cả</string>
    <string name="title_file_attath">File đính kèm</string>
    <string name="no_file_attath">Không tồn tại file </string>
    <string name="title_file_attath_in_doc">File công văn đính kèm</string>
    <string name="title_file_infor_doc">Thông tin trình ký</string>
    <string name="title_file_list_mail_sign">Danh sách trình ký</string>
    <string name="title_file_list_flash_sign">Danh sách ký nháy</string>
    <string name="doc_sign_detail_title">NỘI DUNG TRÌNH KÝ</string>
    <string name="lable_trich_dan">Trích yếu nội dung văn bản:</string>
    <string name="documetSign_itemdetail_titledetail">Chi tiết văn bản</string>
    <string name="documetSign_itemdetail_titledetail_search">Chi tiết văn bản ❯</string>
    <string name="documetSign_assignerName_flash_sign"><Data>
<![CDATA[
			<b>Người chuyển ký:&#160;</b><font color="#2680F6"> %1$s</font>

        ]]>
</Data></string>
    <string name="documetSign_assignerComment_flash_sign"><Data>
<![CDATA[
			 <br><b>Chỉ đạo ký nháy:&#160;</b> %1$s <br>

        ]]>
</Data></string>
    <string name="documetSign_itemdetail_infor1"><Data>
<![CDATA[
			<b>Đơn vị trình ký:&#160;</b> %1$s
        ]]>
</Data></string>
    <string name="documetSign_itemdetail_infor2"><Data>
<![CDATA[
			 <b>Người tạo:&#160;</b> <font color="#2680F6">%1$s</font>
        ]]>
</Data></string>
    <string name="documetSign_itemdetail_infor"><Data>
<![CDATA[
			<b>Ngày tạo:&#160;</b> %1$s <br> <br>
			<b>Số, ký hiệu văn bản:&#160;</b> %2$s <br> <br>
			<b>Độ mật:&#160;</b> %3$s <br> <br>
			<b>Độ khẩn:&#160;</b> %4$s <br> <br>
			<b>Lĩnh vực:&#160;</b> %5$s <br> <br>
			<b>Hình thức văn bản:&#160;</b> %6$s <br> <br>
       		<b>Số đăng ký:&#160;</b> %7$s <br> <br>
         	<b>Đơn vị ban hành:&#160;</b> %8$s <br> <br>
            <b>Nơi nhận văn bản:&#160;</b> %9$s<br>
        ]]>
</Data></string>
    <string name="documetSign_infor"><Data>
<![CDATA[
			<b>Nội dung:&#160;</b> %1$s <br> <br>
       		<b>Ngày trình ký:&#160;</b> %2$s <br>

        ]]>
</Data></string>
    <string name="documetSign_title"><Data>
<![CDATA[
			<b>Trích yếu nội dung văn bản:&#160;</b> %1$s <br>
        ]]>
</Data></string>
    <string name="txt_file_sign">File trình ký:&#160;</string>
    <string name="documetSign_itemdetail_titledetail_departregister">Đơn vị trình ký:&#160;</string>
    <string name="documetSign_itemdetail_titledetail_documentcode">Số, ký hiệu văn bản:&#160;</string>
    <string name="documetSign_itemdetail_titledetail_document_title">Trích yếu nội dung văn bản:&#160;</string>
    <string name="documetSign_itemdetail_titledetail_numberregis">Số đăng ký:&#160;</string>
    <string name="documetSign_itemdetail_titledetail_fileattach">File đính kèm&#160;</string>
    <string name="documetSign_itemdetail_titledetail_info">Thông tin công văn&#160;</string>
    <string name="documetSign_itemdetail_titledetail_listuserfashingsign">Danh sách ký nháy&#160;</string>
    <string name="documetSign_itemdetail_alert_emtynotenotsign">Đồng chí phải ghi lý do từ chối ký</string>
    <string name="documetSign_itemdetail_alert_emtynotenotreview">Đồng chí chưa nhập lý do từ chối phê duyệt</string>
    <string name="documetSign_reviewdoing">Văn bản đang trong quá trình phê duyệt</string>
    <string name="document_show_comment_first">Chỉ đạo trực tiếp</string>
    <string name="document_show_comment_second">Chỉ đạo gián tiếp</string>
    <string name="documetSign_itemdetail_titledetail_flashsign">CHUYỂN KÝ NHÁY</string>
    <string name="documetSign_itemdetail_titledetail_assignercomment">Chỉ đạo ký nháy:&#160; </string>
    <string name="documentSign_alert_signsucess">Đồng chí đã thực hiện ký thành công</string>
    <string name="documentSign_alert_signunsucess">Đồng chí đã thực hiện ký không thành công</string>
    <string name="documentSign_alert_rejectsucsess">Đ/c đã thực hiện từ chối ký thành công!</string>
    <string name="documentSign_alert_rejectnotsucsess">Đ/c thực hiện từ chối ký không thành công, vui lòng thử lại sau!</string>
    <string name="documentSign_alert_rejectnotsucsess31">[Mã 31] Từ chối ký không thành công. Văn bản này đã được ký hoặc từ chối, vui lòng về trang chủ để làm mới dữ liệu.</string>
    <string name="documentSign_alert_confirmrejectsign">Đồng chí có chắc chắn muốn từ chối ký không?</string>
    <string name="documentSign_alert_confirmrejectreview">Đồng chí có chắc chắn muốn từ chối phê duyệt!</string>
    <string name="documentSign_alert_rejectsignsucsess">Đồng chí từ chối phê duyệt thành công.</string>
    <string name="document_sign_title">Ký văn bản</string>
    <string name="document_signlist_title">Ký điện tử</string>
    <string name="document_sign_approval_title">Xét duyệt</string>
    <string name="document_sign_label_reject">Từ chối ký</string>
    <string name="document_sign_label_note">Ý kiến chỉ đạo</string>
    <string name="document_sign_btn_reload_whenSigned">Đóng</string>
    <string name="document_sign_flashsign_success">Chuyển ký nháy thành công</string>
    <string name="document_sign_flashsign_fail">Chuyển ký nháy thất bại</string>
    <string name="document_sign_overdate">Thời gian trình:</string>
    <string name="DOCUMENT_SIGN_ERR_DOCNOTEXIST">[Mã 02] Ký không thành công. File văn bản ký không tồn tại. Đề nghị đ/c từ chối để trình ký lại.</string>
    <string name="DOCUMENT_SIGN_ERR_CONNECT_SIM">[Mã 03] Ký không thành công. Lỗi kết nối đến dịch vụ kí trên SIM. Vui lòng thử lại sau.</string>
    <string name="DOCUMENT_SIGN_ERR_VERIFY_UNSUCCESS">[Mã 04] Ký không thành công. Xác thực chữ ký không hợp lệ. Vui lòng thử lại sau.</string>
    <string name="DOCUMENT_SIGN_ERR_UPDATE_DATA">[Mã 05] Ký không thành công. Lỗi cập nhật dữ liệu. Vui lòng thử lại sau.</string>
    <string name="DOCUMENT_SIGN_ERR_INACTIVE_VOFFICE">[Mã 06] Đồng chí chưa kích hoạt chứng thư trên VOffice, vui lòng liên hệ CSKH (%1$s) để kích hoạt.</string>
    <string name="setting_modesecurity_username">Tên đăng nhập</string>
    <string name="setting_modesecurity_pass">Mật khẩu</string>
    <string name="TEXT_LOGIN">Đăng nhập</string>
    <string name="produc_info">VOffice 3.3.5 - Copyright © 2015\nPhát triển bởi Trung tâm Phần mềm Viettel 1\nBản quyền thuộc Tập đoàn Công nghiệp - Viễn thông Quân đội</string>
    <string name="viet_nam_text">Tiếng Việt</string>
    <string name="english_text">English</string>
    <string name="title_depart_work">Việc giao</string>
    <string name="title_my_work">Việc nhận</string>
    <string name="text_status">Trạng thái:</string>
</resources>