<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/WHITE_COLOR"
    android:layout_height="match_parent"
    tools:context=".fragment.work.FragmentTask">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/margin10"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:background="@drawable/tab_stroke_notselect_left"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"

                android:textColor="@color/BLUE"
                android:layout_weight="1"
                android:id="@+id/txt_persion"
                android:text="@string/title_depart_work"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/BLUE"
                android:background="@drawable/tab_stroke_not_select_right"
                android:id="@+id/txt_doc"
                android:text="@string/title_my_work"/>

        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/GREY">
            <EditText
                android:layout_width="match_parent"
                android:layout_margin="@dimen/margin10"
                android:gravity="center"
                android:drawableLeft="@drawable/search_ic"
                android:layout_height="30dp"
                android:background="@drawable/border_edt_search"/>

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin5">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin5"
                android:background="@color/GREY"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/text_status"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textColor="@color/BLUE_COLOR"
                    android:text="all"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>